# naibbe-cipher-habits

./: README.md  RESULTS.md  evaluation_metrics.py  naibbe_experiment.ipynb  naibbe_habit.py  naibbe_habit_evaluate.py  pyproject.toml
figure_utils/gaskell_bowern_2022/: stats_habit.py
figure_utils/habit_evaluation/data/: README.md  alchemical_herbal_8000.txt  dante_8000.txt  de_sphaera_8000.txt  pliny_book16_8000.txt
figure_utils/habit_evaluation/results/: metric_deltas.csv  metrics_raw.csv  runs.csv  summary.csv
figure_utils/rmsf/: ssc_hurst_comparison.csv  ssc_metrics_comparison.csv
tests/: test_evaluation.py  test_naibbe_habit.py
